[tool.poetry]
name = "sweethawk_surveys"
version = "0.1.0"
description = "Download UltraDDOS surveys from sweethawk and push to Domo."
authors = ["Wynn, Moses <moses.wynn@team.neustar>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"
pydomo = "^0.3.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
pylint = "^2.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
